--- a/task-1/index.html
+++ b/task-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style.css">
+    <!-- <link rel="stylesheet" href="./src/style.css"> -->
     <title>High-Performance List</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
       <!-- card layout container -->
       <div  class="bg-[#6342c0] flex items-center justify-center max-w-3xl m-3 w-full rounded-2xl p-3 "> 
             
-        <ul id="product-list" class=" grid gap-2 rounded-lg w-full  " style="grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));">
+        <ul id="product-list" class="grid w-full gap-2 rounded-lg " style="grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));">
            
 
                 </ul>
