--- a/task-2/index.html
+++ b/task-2/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./src/style.css">
+    <!-- <link rel="stylesheet" href="./src/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic User Manager</title>
   </head>
   <body>
     
-    <section class="w-full min-h-screen bg-teal-400 flex  justify-center items-center" id="container">
+    <section class="flex items-center justify-center w-full min-h-screen bg-teal-400" id="container">
     <div class="flex flex-col p-3 bg-[#e5f7f3] rounded-lg gap-5">
-        <div class="rounded-lg  ">
-          <input type="text" id="name" class="name input border-none   outline-none" placeholder="enter your name  ">
+        <div class="rounded-lg ">
+          <input type="text" id="name" class="border-none outline-none name input" placeholder="enter your name  ">
         </div>
         <div class="rounded-lg ">
-          <input type="text" id="job" class="job  border-none input  outline-none " placeholder=" enter your job role " >
+          <input type="text" id="job" class="border-none outline-none job input " placeholder=" enter your job role " >
         </div>
-        <div class="flex justify-center items-center">
-          <button id="btn" class=" px-3 py-2  bg-emerald-300 rounded-lg hover:cursor-pointer"> add user </button>
+        <div class="flex items-center justify-center">
+          <button id="btn" class="px-3 py-2 rounded-lg  bg-emerald-300 hover:cursor-pointer"> add user </button>
         </div>
       </div>
     
