--- a/task-3/index.html
+++ b/task-3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   <link rel="stylesheet" href="./src/style.css">
+   <!-- <link rel="stylesheet" href="./src/style.css"> -->
       <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Active State Navigator</title>
@@ -56,10 +56,10 @@
   <!-- mobile view -->
   <div class="flex flex-wrap hidden bg-gray-600 peer-checked:block md:hidden">
   <ul class="flex flex-col w-full gap-4 p-4 text-center text-md">
-    <li><a href="#home" class=" nav-link text-gray-200 hover:text-stone-800">Home</a></li>
-    <li><a href="#about"  class= " nav-link text-gray-200 hover:text-stone-800">About</a></li>
-    <li><a href="#skill"  class="nav-link text-gray-200 hover:text-stone-800">Skills</a></li>
-    <li><a href="#project"  class="nav-link text-gray-200 hover:text-stone-800">Projects</a></li>
+    <li><a href="#home" class="text-gray-200  nav-link hover:text-stone-800">Home</a></li>
+    <li><a href="#about"  class= "text-gray-200  nav-link hover:text-stone-800">About</a></li>
+    <li><a href="#skill"  class="text-gray-200 nav-link hover:text-stone-800">Skills</a></li>
+    <li><a href="#project"  class="text-gray-200 nav-link hover:text-stone-800">Projects</a></li>
   </ul>
 </div>
     </header>
